backends/drm: don't allow tearing until the cursor plane is disabled

Once tearing is enabled, atomic tests that try to disable the cursor plane will fail.

BUG: 493166


(cherry picked from commit 21b11326959431073ca9a3d2a63e975be66ced00)

Co-authored-by: Xaver Hugl <xaver.hugl@gmail.com>